test/errhandling/modes/implicit-relaxed-try-nothrows.future
bug: default for module is fatal errors
